Setup wallet integration

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@project-serum/anchor": "^0.26.0",
+    "@solana/wallet-adapter-wallets": "^0.19.15",
     "@solana/web3.js": "^1.74.0",
     "core-js": "^3.8.3",
+    "solana-wallets-vue": "^0.6.0",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.1.6"
